--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -116,7 +116,7 @@
 }
 
 @article{MacEachernAndVanZandt2019,
-  title={Robust modeling in cognitive science},
+  title={Preregistration of Modeling Exercises May Not Be Useful},
   author={MacEachern, Steven N and Van Zandt, Trisha},
   journal={Computational Brain \& Behavior},
   volume={2},
@@ -1583,4 +1583,30 @@
   pages={188--196},
   year={2000},
   publisher={MIT Press}
+}
+
+@article{van2020formalizing,
+  title={Formalizing Verbal Theories},
+  author={van Rooij, Iris and Blokpoel, Mark},
+  journal={Social Psychology},
+  year={2020},
+  publisher={Hogrefe Publishing}
+}
+
+@article{oberauer2019addressing,
+  title={Addressing the theory crisis in psychology},
+  author={Oberauer, Klaus and Lewandowsky, Stephan},
+  journal={Psychonomic bulletin \& review},
+  volume={26},
+  number={5},
+  pages={1596--1618},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{guest2021computational,
+  title={How computational modeling can force theory building in psychological science},
+  author={Guest, Olivia and Martin, Andrea E},
+  year={2021},
+  journal={Perspectives on Psychological Science}
 }
